Added headers and footers to the page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,8 +9,18 @@
 
 </head>
 <body>
+<div id="navbar" class="navbar">
+<ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">FAQ</a></li>
+    <li><a href="#">Contact</a></li>
+</ul>
+</div>
 
-<div id="homepage">
+<div id="to_start" class="centered">
+
+    <br>
 
     <h1 id="pageTitle">Doctor's</h1>
     <p id="subscript">Medical registration system</p>
@@ -29,14 +39,21 @@
             <br/>
         </form>
 
-        <button class="enter popUp"><a href="#" >Enter<a/></button>
+        <button class="enter popUp"><a href="#" >Enter</a></button>
     </div>
 
+<!--adding a footer-->
+<div id="footer" class="navbar">
+    <ul style="float: right">
+        <li><a href="#">Copyright Policy</a></li>
+        <li><a href="#">Disclaimer</a></li>
+    </ul>
 </div>
+
+
+
+
 
 <script src="../JS/script.js"></script>
 </body>
-</html>>
-
-
-Add Comment
+</html>
